@@ -1671,6 +1671,7 @@ or has chosen not to receive e-mail from other users.',
 
 # Watchlist
 'watchlist'			=> 'My watchlist',
+'mywatchlist'		=> 'My watchlist',
 'watchlistfor' => "(for '''$1''')",
 'nowatchlist'		=> 'You have no items on your watchlist.',
 'watchlistanontext' => 'Please $1 to view or edit items on your watchlist.',
